@@ -1,7 +1,8 @@
 /*
  * usb-msc.c -- USB Mass Storage Class protocol handling
  *
- * Copyright (C) 2011, 2012, 2013 Free Software Initiative of Japan
+ * Copyright (C) 2011, 2012, 2013, 2015
+ *               Free Software Initiative of Japan
  * Author: NIIBE Yutaka <gniibe@fsij.org>
  *
  * This file is a part of Fraucheky, making sure to have GNU GPL on a
@@ -328,6 +329,14 @@ msc_handle_command (void)
 
   CSW.dCSWTag = CBW.dCBWTag;
   switch (CBW.CBWCB[0]) {
+  case SCSI_REPORT_LUN:
+    buf[0]  = buf[1] = buf[2] = 0;
+    buf[3]  = 8;
+    buf[4]  = buf[5] = buf[6] = buf[7] = 0;
+    buf[8]  = buf[9] = buf[10]= buf[11]= 0;
+    buf[12] = buf[13]= buf[14]= buf[15]= 0;
+    msc_send_result (buf, 16);
+    goto done;
   case SCSI_REQUEST_SENSE:
     if (CBW.CBWCB[1] & 0x01) /* DESC */
       msc_send_result ((uint8_t *)&scsi_sense_data_desc,
