@@ -1,3 +1,8 @@
+2015-07-23  Niibe Yutaka  <gniibe@fsij.org>
+
+	* usb-msc.c (msc_handle_command): Handle SCSI_REPORT_LUN command.
+	* msc.h (SCSI_REPORT_LUN): New.
+
 2015-03-17  Niibe Yutaka  <gniibe@fsij.org>
 
 	* VERSION: Version 0.2.
